--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@wordpress/scripts": "^23.4.0"
   },
   "dependencies": {
+    "@wordpress/api-fetch": "^6.36.0",
     "@wordpress/block-editor": "^9.4.0",
     "@wordpress/components": "^19.14.0",
     "@wordpress/i18n": "^4.12.0"
